axum-macros/tests/debug_handler/fail/doesnt_implement_from_request_parts.stderr
error[E0277]: the trait bound `String: FromRequestParts<()>` is not satisfied
 --> tests/debug_handler/fail/doesnt_implement_from_request_parts.rs:4:1
  |
4 | #[debug_handler]
  | ^^^^^^^^^^^^^^^^ the trait `FromRequestParts<()>` is not implemented for `String`
  |
  = help: the following other types implement trait `FromRequestParts<S>`:
            <() as FromRequestParts<S>>
            <(T1, T2) as FromRequestParts<S>>
            <(T1, T2, T3) as FromRequestParts<S>>
            <(T1, T2, T3, T4) as FromRequestParts<S>>
            <(T1, T2, T3, T4, T5) as FromRequestParts<S>>
            <(T1, T2, T3, T4, T5, T6) as FromRequestParts<S>>
            <(T1, T2, T3, T4, T5, T6, T7) as FromRequestParts<S>>
            <(T1, T2, T3, T4, T5, T6, T7, T8) as FromRequestParts<S>>
          and 26 others
  = help: see issue #48214
  = note: this error originates in the attribute macro `debug_handler` (in Nightly builds, run with -Z macro-backtrace for more info)
